Update SingleValueFactory and SimpleFactory to support modifiers.

--- a/nbs/core/base.ipynb
+++ b/nbs/core/base.ipynb
@@ -1259,6 +1259,8 @@
     }
    ],
    "source": [
+    "class TestUtilityWithModifiers(StandardUtility):\n",
+    "    pass\n",
     "# Test combine_classes with modifiers\n",
     "w_hover = TestUtilityWithModifiers(\"w\")\n",
     "w_hover._value = \"full\"\n",
@@ -1307,7 +1309,8 @@
    "source": [
     "# Example: Interactive button with hover, focus, and active states\n",
     "from fasthtml.common import Button\n",
-    "\n",
+    "class TestUtilityWithModifiers(StandardUtility):\n",
+    "    pass\n",
     "# Create a utility instance with modifiers\n",
     "bg_base = TestUtilityWithModifiers(\"bg\")\n",
     "bg_base._value = \"blue-500\"\n",
@@ -1351,6 +1354,8 @@
     "# Example: Responsive layout with dark mode support\n",
     "from fasthtml.common import Div, H1, P\n",
     "\n",
+    "class TestUtilityWithModifiers(StandardUtility):\n",
+    "    pass\n",
     "# Create utilities with responsive and dark mode modifiers\n",
     "padding = TestUtilityWithModifiers(\"p\")\n",
     "padding._value = \"4\"\n",
@@ -1406,6 +1411,9 @@
     "# Example: Form input with various states\n",
     "from fasthtml.common import Input, Label, Span\n",
     "\n",
+    "class TestUtilityWithModifiers(StandardUtility):\n",
+    "    pass\n",
+    "    \n",
     "# Create utilities for form states\n",
     "border_base = TestUtilityWithModifiers(\"border\")\n",
     "border_base._value = \"gray-300\"\n",
