Update SimpleFactory to support tab-completion.

--- a/nbs/builders/scales.ipynb
+++ b/nbs/builders/scales.ipynb
@@ -779,7 +779,7 @@
      "output_type": "stream",
      "text": [
       "Generated fractions:\n",
-      "['1/12', '2/12', '1/6', '1/5', '1/4', '3/12', '4/12', '1/3', '2/6', '2/5', '5/12', '3/6', '6/12', '2/4', '1/2', '7/12', '3/5', '4/6', '2/3', '8/12', '3/4', '9/12', '4/5', '5/6', '10/12', '11/12']\n"
+      "['1/12', '2/12', '1/6', '1/5', '3/12', '1/4', '1/3', '2/6', '4/12', '2/5', '5/12', '2/4', '1/2', '3/6', '6/12', '7/12', '3/5', '8/12', '4/6', '2/3', '9/12', '3/4', '4/5', '10/12', '5/6', '11/12']\n"
      ]
     }
    ],
@@ -935,15 +935,60 @@
     "class SimpleFactory(BaseFactory):\n",
     "    \"\"\"Factory for utilities that are simple string values with modifier support.\"\"\"\n",
     "    \n",
+    "    def __new__(cls, values_dict: Optional[Dict[str, str]] = None, doc: Optional[str] = None):\n",
+    "        \"\"\"Create a new instance with dynamic properties for tab-completion.\"\"\"\n",
+    "        # If this is a subclass calling super().__new__, just create the instance normally\n",
+    "        # Subclasses won't benefit from dynamic properties but that's okay since they\n",
+    "        # typically override behavior anyway\n",
+    "        if cls is not SimpleFactory or values_dict is None:\n",
+    "            return object.__new__(cls)\n",
+    "            \n",
+    "        # Create a unique subclass for this instance to avoid conflicts\n",
+    "        class_name = f\"SimpleFactory_{id(values_dict)}\"\n",
+    "        \n",
+    "        # Create class attributes for each value\n",
+    "        class_attrs = {}\n",
+    "        \n",
+    "        # Add properties for each value\n",
+    "        for key, css_value in values_dict.items():\n",
+    "            prop_name = key.replace(\"-\", \"_\")\n",
+    "            \n",
+    "            # Create a property that returns the cached utility\n",
+    "            def make_property(css_val):\n",
+    "                def getter(self):\n",
+    "                    # Access the cache directly from __dict__ to avoid triggering __getattr__\n",
+    "                    cache = self.__dict__.get('_utility_cache', {})\n",
+    "                    if css_val not in cache:\n",
+    "                        from cjm_fasthtml_tailwind.core.base import SingleValueUtility\n",
+    "                        cache[css_val] = SingleValueUtility(css_val)\n",
+    "                        if '_utility_cache' not in self.__dict__:\n",
+    "                            self.__dict__['_utility_cache'] = cache\n",
+    "                    return cache[css_val]\n",
+    "                return property(getter)\n",
+    "            \n",
+    "            class_attrs[prop_name] = make_property(css_value)\n",
+    "        \n",
+    "        # Create the dynamic subclass\n",
+    "        DynamicFactory = type(class_name, (SimpleFactory,), class_attrs)\n",
+    "        \n",
+    "        # Create and return an instance of the dynamic class\n",
+    "        instance = object.__new__(DynamicFactory)\n",
+    "        return instance\n",
+    "    \n",
     "    def __init__(\n",
     "        self,\n",
-    "        values_dict: Dict[str, str],  # Dictionary mapping attribute names to CSS values\n",
+    "        values_dict: Optional[Dict[str, str]] = None,  # Dictionary mapping attribute names to CSS values\n",
     "        doc: Optional[str] = None  # Optional documentation string\n",
     "    ):\n",
     "        \"Initialize with a dictionary of values.\"\n",
+    "        # Handle subclasses that don't pass values_dict in __new__\n",
+    "        if values_dict is None and hasattr(self, '_pending_values'):\n",
+    "            values_dict = self._pending_values\n",
+    "            doc = getattr(self, '_pending_doc', doc)\n",
+    "            \n",
     "        doc = doc or \"Factory for simple utility values\"\n",
     "        super().__init__(doc)\n",
-    "        self._values = values_dict\n",
+    "        self._values = values_dict or {}\n",
     "        # Cache utility instances for each value\n",
     "        self._utility_cache = {}\n",
     "    \n",
@@ -994,7 +1039,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ SimpleFactory with modifiers tests passed!\n"
+      "✅ SimpleFactory with modifiers and tab-completion tests passed!\n"
      ]
     }
    ],
@@ -1027,7 +1072,17 @@
     "auto2 = factory.auto\n",
     "assert auto1 is auto2  # Should be the same cached instance\n",
     "\n",
-    "print(\"✅ SimpleFactory with modifiers tests passed!\")"
+    "# Test tab-completion attributes are present\n",
+    "assert hasattr(factory, 'auto')\n",
+    "assert hasattr(factory, 'none')\n",
+    "assert hasattr(factory, 'multi_word')\n",
+    "\n",
+    "# Verify these are properties\n",
+    "assert isinstance(type(factory).auto, property)\n",
+    "assert isinstance(type(factory).none, property)\n",
+    "assert isinstance(type(factory).multi_word, property)\n",
+    "\n",
+    "print(\"✅ SimpleFactory with modifiers and tab-completion tests passed!\")"
    ]
   },
   {
