--- a/nbs/utilities/layout.ipynb
+++ b/nbs/utilities/layout.ipynb
@@ -524,17 +524,7 @@
     "    \"none\": \"float-none\"\n",
     "}\n",
     "\n",
-    "# Create float factory with special prefix handling\n",
-    "class FloatFactory(SimpleFactory):\n",
-    "    \"\"\"Special factory for float utilities that prepends 'float-' to values.\"\"\"\n",
-    "    def __getattr__(\n",
-    "        self,\n",
-    "        name: str  # The attribute name to look up in float values\n",
-    "    ) -> str:  # The corresponding float CSS class\n",
-    "        \"Get float utility by attribute name.\"\n",
-    "        return super().__getattr__(name)\n",
-    "\n",
-    "float_tw = FloatFactory(FLOAT_VALUES, \"Float utilities for controlling the wrapping of content around an element\")  # Renamed to avoid conflict with Python's float"
+    "float_tw = SimpleFactory(FLOAT_VALUES, \"Float utilities for controlling the wrapping of content around an element\")  # Renamed to avoid conflict with Python's float"
    ]
   },
   {
