--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -109,42 +109,42 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_factory_extraction\n",
     "    cli_explorer --> cli_utils\n",
-    "    cli_explorer --> cli_helper_discovery\n",
-    "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_core_utils_discovery\n",
     "    cli_explorer --> cli_imports\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_test_code\n",
+    "    cli_explorer --> cli_helper_discovery\n",
+    "    cli_explorer --> cli_core_utils_discovery\n",
+    "    cli_explorer --> cli_factory_extraction\n",
+    "    cli_explorer --> cli_search\n",
     "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
-    "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_factory_extraction\n",
+    "    cli_helper_discovery --> cli_utils\n",
     "    cli_imports --> cli_helper_discovery\n",
-    "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_imports --> cli_factory_extraction\n",
     "    cli_imports --> cli_utils\n",
+    "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_search --> cli_example_discovery\n",
+    "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_utils\n",
     "    cli_search --> cli_factory_extraction\n",
-    "    cli_search --> cli_helper_discovery\n",
-    "    cli_search --> cli_example_discovery\n",
+    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_utils\n",
     "    cli_test_code --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_helper_discovery\n",
-    "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_spacing\n",
     "    core_testing --> utilities_layout\n",
+    "    core_testing --> utilities_spacing\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> core_resources\n",
+    "    core_testing --> utilities_sizing\n",
     "    core_testing --> core_base\n",
-    "    utilities_accessibility --> utilities_layout\n",
+    "    core_testing --> core_resources\n",
     "    utilities_accessibility --> core_base\n",
+    "    utilities_accessibility --> utilities_layout\n",
     "    utilities_accessibility --> builders_scales\n",
     "    utilities_backgrounds --> core_base\n",
-    "    utilities_backgrounds --> builders_scales\n",
     "    utilities_backgrounds --> builders_colors\n",
+    "    utilities_backgrounds --> builders_scales\n",
     "    utilities_borders --> core_base\n",
     "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> builders_colors\n",
@@ -152,30 +152,30 @@
     "    utilities_effects --> builders_colors\n",
     "    utilities_effects --> builders_scales\n",
     "    utilities_filters --> core_base\n",
-    "    utilities_filters --> builders_scales\n",
     "    utilities_filters --> builders_colors\n",
-    "    utilities_flexbox_and_grid --> builders_scales\n",
+    "    utilities_filters --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
-    "    utilities_interactivity --> builders_scales\n",
+    "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_interactivity --> core_base\n",
+    "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> builders_colors\n",
     "    utilities_layout --> core_base\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_base\n",
-    "    utilities_spacing --> builders_scales\n",
+    "    utilities_sizing --> builders_scales\n",
     "    utilities_spacing --> core_base\n",
+    "    utilities_spacing --> builders_scales\n",
     "    utilities_svg --> core_base\n",
-    "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> builders_scales\n",
-    "    utilities_tables --> builders_scales\n",
+    "    utilities_svg --> builders_colors\n",
     "    utilities_tables --> core_base\n",
-    "    utilities_transforms --> builders_scales\n",
+    "    utilities_tables --> builders_scales\n",
     "    utilities_transforms --> core_base\n",
+    "    utilities_transforms --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_transitions_and_animation --> builders_scales\n",
-    "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> core_base\n",
+    "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> builders_colors\n",
     "```\n",
     "\n",
@@ -3936,7 +3936,6 @@
     "    OverflowFactory,\n",
     "    test_layout_overflow_examples,\n",
     "    test_layout_z_index_examples,\n",
-    "    FloatFactory,\n",
     "    test_layout_float_clear_examples,\n",
     "    ObjectPositionFactory,\n",
     "    test_layout_object_examples,\n",
@@ -4132,12 +4131,6 @@
     "            self\n",
     "        ) -> Dict[str, Any]:  # Dictionary with factory information\n",
     "        \"Get information about the overflow factory.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "class FloatFactory(SimpleFactory):\n",
-    "    \"Special factory for float utilities that prepends 'float-' to values.\"\n",
-    "    \n",
     "```\n",
     "\n",
     "```python\n",
@@ -4783,14 +4776,14 @@
     "class SimpleFactory:\n",
     "    def __init__(\n",
     "        self,\n",
-    "        values_dict: Dict[str, str],  # Dictionary mapping attribute names to CSS values\n",
+    "        values_dict: Optional[Dict[str, str]] = None,  # Dictionary mapping attribute names to CSS values\n",
     "        doc: Optional[str] = None  # Optional documentation string\n",
     "    )\n",
     "    \"Factory for utilities that are simple string values with modifier support.\"\n",
     "    \n",
     "    def __init__(\n",
     "            self,\n",
-    "            values_dict: Dict[str, str],  # Dictionary mapping attribute names to CSS values\n",
+    "            values_dict: Optional[Dict[str, str]] = None,  # Dictionary mapping attribute names to CSS values\n",
     "            doc: Optional[str] = None  # Optional documentation string\n",
     "        )\n",
     "        \"Initialize with a dictionary of values.\"\n",
