Update SimpleFactory so that subclasses support tab-completion as well.

--- a/nbs/utilities/interactivity.ipynb
+++ b/nbs/utilities/interactivity.ipynb
@@ -395,26 +395,26 @@
     "def test_interactivity_cursor_examples():\n",
     "    \"\"\"Test cursor utilities.\"\"\"\n",
     "    # Common cursors\n",
-    "    assert cursor.auto == \"cursor-auto\"\n",
-    "    assert cursor.default == \"cursor-default\"\n",
-    "    assert cursor.pointer == \"cursor-pointer\"\n",
-    "    assert cursor.wait == \"cursor-wait\"\n",
-    "    assert cursor.text == \"cursor-text\"\n",
-    "    assert cursor.move == \"cursor-move\"\n",
-    "    assert cursor.help == \"cursor-help\"\n",
-    "    assert cursor.not_allowed == \"cursor-not-allowed\"\n",
+    "    assert str(cursor.auto) == \"cursor-auto\"\n",
+    "    assert str(cursor.default) == \"cursor-default\"\n",
+    "    assert str(cursor.pointer) == \"cursor-pointer\"\n",
+    "    assert str(cursor.wait) == \"cursor-wait\"\n",
+    "    assert str(cursor.text) == \"cursor-text\"\n",
+    "    assert str(cursor.move) == \"cursor-move\"\n",
+    "    assert str(cursor.help) == \"cursor-help\"\n",
+    "    assert str(cursor.not_allowed) == \"cursor-not-allowed\"\n",
     "    \n",
     "    # Resize cursors\n",
-    "    assert cursor.n_resize == \"cursor-n-resize\"\n",
-    "    assert cursor.ne_resize == \"cursor-ne-resize\"\n",
-    "    assert cursor.col_resize == \"cursor-col-resize\"\n",
-    "    assert cursor.row_resize == \"cursor-row-resize\"\n",
+    "    assert str(cursor.n_resize) == \"cursor-n-resize\"\n",
+    "    assert str(cursor.ne_resize) == \"cursor-ne-resize\"\n",
+    "    assert str(cursor.col_resize) == \"cursor-col-resize\"\n",
+    "    assert str(cursor.row_resize) == \"cursor-row-resize\"\n",
     "    \n",
     "    # Special cursors\n",
-    "    assert cursor.grab == \"cursor-grab\"\n",
-    "    assert cursor.grabbing == \"cursor-grabbing\"\n",
-    "    assert cursor.zoom_in == \"cursor-zoom-in\"\n",
-    "    assert cursor.zoom_out == \"cursor-zoom-out\"\n",
+    "    assert str(cursor.grab) == \"cursor-grab\"\n",
+    "    assert str(cursor.grabbing) == \"cursor-grabbing\"\n",
+    "    assert str(cursor.zoom_in) == \"cursor-zoom-in\"\n",
+    "    assert str(cursor.zoom_out) == \"cursor-zoom-out\"\n",
     "    \n",
     "    # Custom properties and arbitrary values\n",
     "    assert cursor(\"--custom-cursor\") == \"cursor-(--custom-cursor)\"\n",
@@ -1222,7 +1222,7 @@
     "        \"Drag me\",\n",
     "        cls=combine_classes(\n",
     "            cursor.grab,\n",
-    "            \"active:\" + cursor.grabbing,\n",
+    "            \"active:\" + str(cursor.grabbing),\n",
     "            touch.none,\n",
     "            select.none,\n",
     "            \"p-4 bg-gray-200 rounded\"\n",
