--- a/nbs/builders/scales.ipynb
+++ b/nbs/builders/scales.ipynb
@@ -779,7 +779,7 @@
      "output_type": "stream",
      "text": [
       "Generated fractions:\n",
-      "['1/12', '2/12', '1/6', '1/5', '3/12', '1/4', '1/3', '2/6', '4/12', '2/5', '5/12', '2/4', '1/2', '3/6', '6/12', '7/12', '3/5', '8/12', '4/6', '2/3', '9/12', '3/4', '4/5', '10/12', '5/6', '11/12']\n"
+      "['1/12', '2/12', '1/6', '1/5', '3/12', '1/4', '2/6', '1/3', '4/12', '2/5', '5/12', '6/12', '3/6', '2/4', '1/2', '7/12', '3/5', '2/3', '8/12', '4/6', '9/12', '3/4', '4/5', '5/6', '10/12', '11/12']\n"
      ]
     }
    ],
@@ -938,21 +938,71 @@
     "    def __new__(cls, values_dict: Optional[Dict[str, str]] = None, doc: Optional[str] = None):\n",
     "        \"\"\"Create a new instance with dynamic properties for tab-completion.\"\"\"\n",
     "        # If this is a subclass calling super().__new__, just create the instance normally\n",
-    "        # Subclasses won't benefit from dynamic properties but that's okay since they\n",
-    "        # typically override behavior anyway\n",
-    "        if cls is not SimpleFactory or values_dict is None:\n",
+    "        # We'll add properties later in __init__\n",
+    "        if cls is not SimpleFactory:\n",
     "            return object.__new__(cls)\n",
     "            \n",
-    "        # Create a unique subclass for this instance to avoid conflicts\n",
-    "        class_name = f\"SimpleFactory_{id(values_dict)}\"\n",
+    "        # For direct SimpleFactory instances with values_dict provided\n",
+    "        if values_dict is not None:\n",
+    "            # Create a unique subclass for this instance to avoid conflicts\n",
+    "            class_name = f\"SimpleFactory_{id(values_dict)}\"\n",
+    "            \n",
+    "            # Create class attributes for each value\n",
+    "            class_attrs = {}\n",
+    "            \n",
+    "            # Add properties for each value\n",
+    "            for key, css_value in values_dict.items():\n",
+    "                prop_name = key.replace(\"-\", \"_\")\n",
+    "                \n",
+    "                # Create a property that returns the cached utility\n",
+    "                def make_property(css_val):\n",
+    "                    def getter(self):\n",
+    "                        # Access the cache directly from __dict__ to avoid triggering __getattr__\n",
+    "                        cache = self.__dict__.get('_utility_cache', {})\n",
+    "                        if css_val not in cache:\n",
+    "                            from cjm_fasthtml_tailwind.core.base import SingleValueUtility\n",
+    "                            cache[css_val] = SingleValueUtility(css_val)\n",
+    "                            if '_utility_cache' not in self.__dict__:\n",
+    "                                self.__dict__['_utility_cache'] = cache\n",
+    "                        return cache[css_val]\n",
+    "                    return property(getter)\n",
+    "                \n",
+    "                class_attrs[prop_name] = make_property(css_value)\n",
+    "            \n",
+    "            # Create the dynamic subclass\n",
+    "            DynamicFactory = type(class_name, (SimpleFactory,), class_attrs)\n",
+    "            \n",
+    "            # Create and return an instance of the dynamic class\n",
+    "            instance = object.__new__(DynamicFactory)\n",
+    "            return instance\n",
+    "        \n",
+    "        # Default case\n",
+    "        return object.__new__(cls)\n",
+    "    \n",
+    "    def _add_dynamic_properties(self, values_dict: Dict[str, str]):\n",
+    "        \"\"\"Add properties dynamically to the instance for tab-completion.\"\"\"\n",
+    "        # Create a new class that inherits from the current class\n",
+    "        current_class = self.__class__\n",
+    "        class_name = f\"{current_class.__name__}_Dynamic_{id(values_dict)}\"\n",
     "        \n",
     "        # Create class attributes for each value\n",
     "        class_attrs = {}\n",
     "        \n",
-    "        # Add properties for each value\n",
+    "        # Copy existing class attributes\n",
+    "        for attr_name in dir(current_class):\n",
+    "            if not attr_name.startswith('_'):\n",
+    "                attr = getattr(current_class, attr_name)\n",
+    "                if not callable(attr) or isinstance(attr, property):\n",
+    "                    class_attrs[attr_name] = attr\n",
+    "        \n",
+    "        # Add new properties for each value\n",
     "        for key, css_value in values_dict.items():\n",
     "            prop_name = key.replace(\"-\", \"_\")\n",
     "            \n",
+    "            # Skip if property already exists\n",
+    "            if hasattr(current_class, prop_name):\n",
+    "                continue\n",
+    "                \n",
     "            # Create a property that returns the cached utility\n",
     "            def make_property(css_val):\n",
     "                def getter(self):\n",
@@ -969,11 +1019,10 @@
     "            class_attrs[prop_name] = make_property(css_value)\n",
     "        \n",
     "        # Create the dynamic subclass\n",
-    "        DynamicFactory = type(class_name, (SimpleFactory,), class_attrs)\n",
+    "        DynamicClass = type(class_name, (current_class,), class_attrs)\n",
     "        \n",
-    "        # Create and return an instance of the dynamic class\n",
-    "        instance = object.__new__(DynamicFactory)\n",
-    "        return instance\n",
+    "        # Change the instance's class to the dynamic one\n",
+    "        self.__class__ = DynamicClass\n",
     "    \n",
     "    def __init__(\n",
     "        self,\n",
@@ -981,16 +1030,20 @@
     "        doc: Optional[str] = None  # Optional documentation string\n",
     "    ):\n",
     "        \"Initialize with a dictionary of values.\"\n",
-    "        # Handle subclasses that don't pass values_dict in __new__\n",
-    "        if values_dict is None and hasattr(self, '_pending_values'):\n",
-    "            values_dict = self._pending_values\n",
-    "            doc = getattr(self, '_pending_doc', doc)\n",
-    "            \n",
     "        doc = doc or \"Factory for simple utility values\"\n",
     "        super().__init__(doc)\n",
+    "        \n",
+    "        # Initialize with empty dict if not provided\n",
     "        self._values = values_dict or {}\n",
     "        # Cache utility instances for each value\n",
     "        self._utility_cache = {}\n",
+    "        \n",
+    "        # Add dynamic properties if we have values and this is a subclass\n",
+    "        # or if this is a direct instance that didn't get properties in __new__\n",
+    "        if self._values and (self.__class__.__name__ == 'SimpleFactory' or \n",
+    "                           not any(isinstance(getattr(self.__class__, attr, None), property) \n",
+    "                                 for attr in dir(self.__class__))):\n",
+    "            self._add_dynamic_properties(self._values)\n",
     "    \n",
     "    def __getattr__(\n",
     "        self,\n",
@@ -1083,6 +1136,58 @@
     "assert isinstance(type(factory).multi_word, property)\n",
     "\n",
     "print(\"✅ SimpleFactory with modifiers and tab-completion tests passed!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "r6ae9nui94r",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ SimpleFactory subclass with tab-completion tests passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test SimpleFactory subclasses with tab-completion support\n",
+    "class TestSubFactory(SimpleFactory):\n",
+    "    \"\"\"Test subclass of SimpleFactory.\"\"\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        test_values = {\n",
+    "            \"option1\": \"test-option1\",\n",
+    "            \"option2\": \"test-option2\",\n",
+    "            \"multi-word\": \"test-multi-word\"\n",
+    "        }\n",
+    "        super().__init__(test_values, \"Test subclass factory\")\n",
+    "\n",
+    "# Create instance and test\n",
+    "sub_factory = TestSubFactory()\n",
+    "\n",
+    "# Test basic access\n",
+    "assert str(sub_factory.option1) == \"test-option1\"\n",
+    "assert str(sub_factory.option2) == \"test-option2\"\n",
+    "assert str(sub_factory.multi_word) == \"test-multi-word\"\n",
+    "\n",
+    "# Test tab-completion attributes are present\n",
+    "assert hasattr(sub_factory, 'option1')\n",
+    "assert hasattr(sub_factory, 'option2')\n",
+    "assert hasattr(sub_factory, 'multi_word')\n",
+    "\n",
+    "# Verify these are properties\n",
+    "assert isinstance(type(sub_factory).option1, property)\n",
+    "assert isinstance(type(sub_factory).option2, property)\n",
+    "assert isinstance(type(sub_factory).multi_word, property)\n",
+    "\n",
+    "# Test with modifiers\n",
+    "assert str(sub_factory.option1.hover) == \"hover:test-option1\"\n",
+    "assert str(sub_factory.option2.md) == \"md:test-option2\"\n",
+    "\n",
+    "print(\"✅ SimpleFactory subclass with tab-completion tests passed!\")"
    ]
   },
   {
