Update ScaledFactory to support tab-completion.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -110,9 +110,9 @@
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
     "    cli_explorer --> cli_utils\n",
-    "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_factory_extraction\n",
     "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_factory_extraction\n",
+    "    cli_explorer --> cli_example_discovery\n",
     "    cli_explorer --> cli_test_code\n",
     "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_imports\n",
@@ -127,49 +127,49 @@
     "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_core_utils_discovery\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_example_discovery\n",
+    "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_helper_discovery\n",
     "    cli_test_code --> cli_utils\n",
     "    cli_test_code --> cli_factory_extraction\n",
     "    cli_test_code --> cli_helper_discovery\n",
+    "    core_testing --> utilities_layout\n",
     "    core_testing --> utilities_sizing\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_layout\n",
-    "    core_testing --> core_resources\n",
     "    core_testing --> utilities_spacing\n",
     "    core_testing --> core_base\n",
-    "    utilities_accessibility --> core_base\n",
-    "    utilities_accessibility --> builders_scales\n",
+    "    core_testing --> core_resources\n",
     "    utilities_accessibility --> utilities_layout\n",
+    "    utilities_accessibility --> builders_scales\n",
+    "    utilities_accessibility --> core_base\n",
     "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> builders_scales\n",
     "    utilities_borders --> core_base\n",
-    "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> builders_colors\n",
-    "    utilities_effects --> core_base\n",
+    "    utilities_borders --> builders_scales\n",
     "    utilities_effects --> builders_colors\n",
+    "    utilities_effects --> core_base\n",
     "    utilities_effects --> builders_scales\n",
-    "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> core_base\n",
+    "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> builders_scales\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> builders_colors\n",
-    "    utilities_layout --> core_base\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_sizing --> core_base\n",
+    "    utilities_layout --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
-    "    utilities_spacing --> core_base\n",
+    "    utilities_sizing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
-    "    utilities_svg --> builders_colors\n",
+    "    utilities_spacing --> core_base\n",
     "    utilities_svg --> core_base\n",
+    "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> builders_scales\n",
-    "    utilities_tables --> core_base\n",
     "    utilities_tables --> builders_scales\n",
+    "    utilities_tables --> core_base\n",
     "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_base\n",
     "    utilities_transitions_and_animation --> core_base\n",
@@ -190,7 +190,93 @@
     "\n",
     "### `cjm-tailwind-explore` Command\n",
     "\n",
-    "CLI command `cjm-tailwind-explore` found but help text unavailable.\n",
+    "```\n",
+    "usage: cjm-tailwind-explore [-h]\n",
+    "                            {modules,factories,factory,examples,example,helpers,helper,search,test-code,core-utils,core-util,imports,scan}\n",
+    "                            ...\n",
+    "\n",
+    "cjm-fasthtml-tailwind CLI Explorer\n",
+    "\n",
+    "This tool helps you explore the cjm-fasthtml-tailwind library, which provides:\n",
+    "- Python-native Tailwind CSS v4 utility class builders for FastHTML projects\n",
+    "- Type-safe, dynamic CSS class generation without hardcoded strings\n",
+    "- Comprehensive utility factories (forced_color_adjust, not_sr_only, sr_only, etc.)\n",
+    "- Helper functions for common patterns\n",
+    "- Full integration with FastHTML components\n",
+    "\n",
+    "Purpose: This CLI tool enables autonomous exploration of the library's API by:\n",
+    "- Discovering all available utility modules and their documentation\n",
+    "- Listing factory instances with their built-in documentation\n",
+    "- Showing usage examples from test functions\n",
+    "- Providing source code for helper functions\n",
+    "- Searching across all library components\n",
+    "- Testing code snippets with automatic imports\n",
+    "- Generating recommended import statements\n",
+    "- Scanning existing code for replaceable CSS patterns\n",
+    "\n",
+    "All information is dynamically extracted from the library itself - nothing is hardcoded.\n",
+    "\n",
+    "positional arguments:\n",
+    "  {modules,factories,factory,examples,example,helpers,helper,search,test-code,core-utils,core-util,imports,scan}\n",
+    "                        Available commands\n",
+    "    modules             List all utility modules\n",
+    "    factories           List factories\n",
+    "    factory             Show detailed info for a specific factory\n",
+    "    examples            Show usage examples\n",
+    "    example             Show source code for a specific example\n",
+    "    helpers             Show helper functions\n",
+    "    helper              Show source code for a specific helper\n",
+    "    search              Search across all library components\n",
+    "    test-code           Test code snippets using the library\n",
+    "    core-utils          List core utility functions\n",
+    "    core-util           Show source code for a core utility\n",
+    "    imports             Show recommended import statements\n",
+    "    scan                Scan code for replaceable CSS patterns\n",
+    "\n",
+    "options:\n",
+    "  -h, --help            show this help message and exit\n",
+    "\n",
+    "Getting Started:\n",
+    "  1. List all modules:     cjm-tailwind-explore modules\n",
+    "  2. View factories:       cjm-tailwind-explore factories\n",
+    "  3. Search for patterns:  cjm-tailwind-explore search <query>\n",
+    "  4. Test code:           cjm-tailwind-explore test-code \"<code>\"\n",
+    "  5. Get imports:         cjm-tailwind-explore imports\n",
+    "  6. Scan existing code:  cjm-tailwind-explore scan <file>\n",
+    "\n",
+    "Exploration Workflow:\n",
+    "  - Start with 'modules' to see available utility categories\n",
+    "  - Use 'factories -m <module>' to explore specific modules\n",
+    "  - Use 'factory <module> <name>' for detailed factory information\n",
+    "  - Use 'examples' to see test-based usage patterns\n",
+    "  - Use 'search' to find specific functionality\n",
+    "  - Use 'test-code' to verify your understanding\n",
+    "  - Use 'scan' to analyze existing code for migration opportunities\n",
+    "\n",
+    "Key Concepts:\n",
+    "  - Factories: Objects that generate CSS classes (e.g., forced_color_adjust, not_sr_only, sr_only)\n",
+    "  - Modules: Categories of utilities (accessibility, backgrounds, borders, etc.)\n",
+    "  - Examples: Test functions demonstrating usage patterns\n",
+    "  - Helpers: Convenience functions for common patterns\n",
+    "\n",
+    "Tips for Coding Assistants:\n",
+    "  - Use 'search --include-source' to find usage patterns in code\n",
+    "  - Use 'test-code' to validate generated code before using it\n",
+    "  - Use 'imports' to get all necessary import statements\n",
+    "  - Use 'scan' to identify replaceable hardcoded CSS classes\n",
+    "  - Factory names are intuitive: forced_color_adjust, not_sr_only, sr_only\n",
+    "  - Combine utilities with combine_classes() function\n",
+    "  - All factories support method chaining and attribute access\n",
+    "\n",
+    "Example Usage Flow:\n",
+    "  cjm-tailwind-explore modules                    # See what's available\n",
+    "  cjm-tailwind-explore factories -m accessibility       # Explore accessibility utilities\n",
+    "  cjm-tailwind-explore factory accessibility forced_color_adjust          # Learn about forced_color_adjust factory\n",
+    "  cjm-tailwind-explore example accessibility forced_color_adjust      # See usage examples\n",
+    "  cjm-tailwind-explore test-code 'print(str(forced_color_adjust.auto))'   # Test your understanding\n",
+    "  cjm-tailwind-explore scan app.py                # Analyze existing code\n",
+    "\n",
+    "```\n",
     "\n",
     "For detailed help on any command, use `cjm-tailwind-explore <command> --help`."
    ]
@@ -4594,16 +4680,16 @@
     "class ScaledFactory:\n",
     "    def __init__(\n",
     "        self, \n",
-    "        prefix: str,  # The utility prefix (e.g., 'w', 'h', 'p')\n",
-    "        config: ScaleConfig,  # Configuration defining valid scales and values\n",
+    "        prefix: Optional[str] = None,  # The utility prefix (e.g., 'w', 'h', 'p')\n",
+    "        config: Optional[ScaleConfig] = None,  # Configuration defining valid scales and values\n",
     "        doc: Optional[str] = None  # Optional documentation string\n",
     "    )\n",
     "    \"Factory for creating scaled utilities with enhanced attribute access.\"\n",
     "    \n",
     "    def __init__(\n",
     "            self, \n",
-    "            prefix: str,  # The utility prefix (e.g., 'w', 'h', 'p')\n",
-    "            config: ScaleConfig,  # Configuration defining valid scales and values\n",
+    "            prefix: Optional[str] = None,  # The utility prefix (e.g., 'w', 'h', 'p')\n",
+    "            config: Optional[ScaleConfig] = None,  # Configuration defining valid scales and values\n",
     "            doc: Optional[str] = None  # Optional documentation string\n",
     "        )\n",
     "        \"Initialize with prefix and scale configuration.\"\n",
