--- a/nbs/builders/scales.ipynb
+++ b/nbs/builders/scales.ipynb
@@ -224,15 +224,138 @@
     "class ScaledFactory(UtilityFactory[ScaledUtility]):\n",
     "    \"\"\"Factory for creating scaled utilities with enhanced attribute access.\"\"\"\n",
     "    \n",
+    "    def __new__(cls, prefix: Optional[str] = None, config: Optional[ScaleConfig] = None, doc: Optional[str] = None):\n",
+    "        \"\"\"Create a new instance with dynamic properties for tab-completion.\"\"\"\n",
+    "        # If this is a subclass, just create a normal instance\n",
+    "        # Subclasses will add properties in __init__ if needed\n",
+    "        if cls is not ScaledFactory:\n",
+    "            return object.__new__(cls)\n",
+    "            \n",
+    "        # For direct ScaledFactory instances, create dynamic properties\n",
+    "        if prefix is not None and config is not None:\n",
+    "            # Create a unique subclass for this instance\n",
+    "            class_name = f\"ScaledFactory_{prefix}_{id(config)}\"\n",
+    "            \n",
+    "            # Create class attributes\n",
+    "            class_attrs = {}\n",
+    "            \n",
+    "            # Add properties for special values\n",
+    "            if config.special:\n",
+    "                for key, value in config.special.items():\n",
+    "                    prop_name = key.replace(\"-\", \"_\")\n",
+    "                    # Create a property that returns a ScaledUtility instance\n",
+    "                    def make_property(val):\n",
+    "                        def getter(self):\n",
+    "                            instance = ScaledUtility(self.prefix, self.config)\n",
+    "                            instance._value = val\n",
+    "                            return instance\n",
+    "                        return property(getter)\n",
+    "                    class_attrs[prop_name] = make_property(value)\n",
+    "            \n",
+    "            # Add properties for named scales\n",
+    "            if config.named:\n",
+    "                for named_scale in config.named:\n",
+    "                    prop_name = f\"_{named_scale.name}\" if named_scale.name[0].isdigit() else named_scale.name\n",
+    "                    prop_name = prop_name.replace(\"-\", \"_\")\n",
+    "                    # Create a property that returns a ScaledUtility instance\n",
+    "                    def make_property(scale_name):\n",
+    "                        def getter(self):\n",
+    "                            instance = ScaledUtility(self.prefix, self.config)\n",
+    "                            instance._value = scale_name\n",
+    "                            return instance\n",
+    "                        return property(getter)\n",
+    "                    class_attrs[prop_name] = make_property(named_scale.name)\n",
+    "            \n",
+    "            # Create the dynamic subclass\n",
+    "            DynamicFactory = type(class_name, (ScaledFactory,), class_attrs)\n",
+    "            \n",
+    "            # Create and return an instance of the dynamic class\n",
+    "            instance = object.__new__(DynamicFactory)\n",
+    "            return instance\n",
+    "        \n",
+    "        # Default case\n",
+    "        return object.__new__(cls)\n",
+    "    \n",
+    "    def _add_dynamic_properties(self):\n",
+    "        \"\"\"Add properties dynamically to the instance for tab-completion.\"\"\"\n",
+    "        if not hasattr(self, 'config') or not self.config:\n",
+    "            return\n",
+    "            \n",
+    "        # Create a new class that inherits from the current class\n",
+    "        current_class = self.__class__\n",
+    "        class_name = f\"{current_class.__name__}_Dynamic_{id(self.config)}\"\n",
+    "        \n",
+    "        # Create class attributes\n",
+    "        class_attrs = {}\n",
+    "        \n",
+    "        # Copy existing class attributes\n",
+    "        for attr_name in dir(current_class):\n",
+    "            if not attr_name.startswith('_'):\n",
+    "                attr = getattr(current_class, attr_name)\n",
+    "                if not callable(attr) or isinstance(attr, property):\n",
+    "                    class_attrs[attr_name] = attr\n",
+    "        \n",
+    "        # Add properties for special values\n",
+    "        if self.config.special:\n",
+    "            for key, value in self.config.special.items():\n",
+    "                prop_name = key.replace(\"-\", \"_\")\n",
+    "                # Skip if property already exists\n",
+    "                if hasattr(current_class, prop_name):\n",
+    "                    continue\n",
+    "                    \n",
+    "                # Create a property that returns a ScaledUtility instance\n",
+    "                def make_property(val):\n",
+    "                    def getter(self):\n",
+    "                        instance = ScaledUtility(self.prefix, self.config)\n",
+    "                        instance._value = val\n",
+    "                        return instance\n",
+    "                    return property(getter)\n",
+    "                class_attrs[prop_name] = make_property(value)\n",
+    "        \n",
+    "        # Add properties for named scales\n",
+    "        if self.config.named:\n",
+    "            for named_scale in self.config.named:\n",
+    "                prop_name = f\"_{named_scale.name}\" if named_scale.name[0].isdigit() else named_scale.name\n",
+    "                prop_name = prop_name.replace(\"-\", \"_\")\n",
+    "                # Skip if property already exists\n",
+    "                if hasattr(current_class, prop_name):\n",
+    "                    continue\n",
+    "                    \n",
+    "                # Create a property that returns a ScaledUtility instance\n",
+    "                def make_property(scale_name):\n",
+    "                    def getter(self):\n",
+    "                        instance = ScaledUtility(self.prefix, self.config)\n",
+    "                        instance._value = scale_name\n",
+    "                        return instance\n",
+    "                    return property(getter)\n",
+    "                class_attrs[prop_name] = make_property(named_scale.name)\n",
+    "        \n",
+    "        # Create the dynamic subclass\n",
+    "        DynamicClass = type(class_name, (current_class,), class_attrs)\n",
+    "        \n",
+    "        # Change the instance's class to the dynamic one\n",
+    "        self.__class__ = DynamicClass\n",
+    "    \n",
     "    def __init__(\n",
     "        self, \n",
-    "        prefix: str,  # The utility prefix (e.g., 'w', 'h', 'p')\n",
-    "        config: ScaleConfig,  # Configuration defining valid scales and values\n",
+    "        prefix: Optional[str] = None,  # The utility prefix (e.g., 'w', 'h', 'p')\n",
+    "        config: Optional[ScaleConfig] = None,  # Configuration defining valid scales and values\n",
     "        doc: Optional[str] = None  # Optional documentation string\n",
     "    ):\n",
     "        \"\"\"Initialize with prefix and scale configuration.\"\"\"\n",
+    "        # Handle subclasses that might not pass all arguments\n",
+    "        if prefix is None:\n",
+    "            # Subclass must set these in its __init__\n",
+    "            return\n",
+    "            \n",
     "        self.config = config\n",
     "        super().__init__(ScaledUtility, prefix, doc)\n",
+    "        \n",
+    "        # Add dynamic properties if this is a subclass or properties weren't added in __new__\n",
+    "        if (self.__class__.__name__ == 'ScaledFactory' or \n",
+    "            not any(isinstance(getattr(self.__class__, attr, None), property) \n",
+    "                  for attr in dir(self.__class__) if not attr.startswith('_'))):\n",
+    "            self._add_dynamic_properties()\n",
     "    \n",
     "    def __call__(\n",
     "        self, \n",
@@ -253,6 +376,10 @@
     "        Handle attribute access for named values.\n",
     "        Examples: w.full, h.screen, p.auto, w._2xl\n",
     "        \"\"\"\n",
+    "        # Avoid recursion by checking if essential attributes exist\n",
+    "        if name in ['prefix', 'config']:\n",
+    "            raise AttributeError(f\"'{self.__class__.__name__}' object has no attribute '{name}'\")\n",
+    "            \n",
     "        # Handle negative prefix\n",
     "        if name.startswith(\"neg_\"):\n",
     "            actual_name = name[4:]  # Remove \"neg_\" prefix\n",
@@ -332,6 +459,37 @@
     "#| export\n",
     "class NegativeFactory:\n",
     "    \"\"\"Factory for creating negative variants.\"\"\"\n",
+    "    \n",
+    "    def __new__(cls, prefix: str, config: ScaleConfig):\n",
+    "        \"\"\"Create a new instance with dynamic properties for tab-completion.\"\"\"\n",
+    "        # Create a unique subclass for this instance\n",
+    "        class_name = f\"NegativeFactory_{prefix}_{id(config)}\"\n",
+    "        \n",
+    "        # Create class attributes\n",
+    "        class_attrs = {}\n",
+    "        \n",
+    "        # Add properties for special values\n",
+    "        if config.special:\n",
+    "            for key, value in config.special.items():\n",
+    "                # Skip 'auto' for negative values as it doesn't make sense\n",
+    "                if key == 'auto':\n",
+    "                    continue\n",
+    "                prop_name = key.replace(\"-\", \"_\")\n",
+    "                # Create a property that returns a negative ScaledUtility instance\n",
+    "                def make_property(val):\n",
+    "                    def getter(self):\n",
+    "                        instance = ScaledUtility(self.prefix, self.config, negative=True)\n",
+    "                        instance._value = val\n",
+    "                        return instance\n",
+    "                    return property(getter)\n",
+    "                class_attrs[prop_name] = make_property(value)\n",
+    "        \n",
+    "        # Create the dynamic subclass\n",
+    "        DynamicFactory = type(class_name, (NegativeFactory,), class_attrs)\n",
+    "        \n",
+    "        # Create and return an instance of the dynamic class\n",
+    "        instance = object.__new__(DynamicFactory)\n",
+    "        return instance\n",
     "    \n",
     "    def __init__(\n",
     "        self,\n",
@@ -618,6 +776,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4rqj7yff0et",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ ScaledFactory tab-completion tests passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test ScaledFactory tab-completion for special values and named scales\n",
+    "w = ScaledFactory(\"w\", SIZE_CONFIG)\n",
+    "\n",
+    "# Test special values have properties for tab-completion\n",
+    "assert hasattr(w, 'auto')\n",
+    "assert hasattr(w, 'px')\n",
+    "assert hasattr(w, 'full')\n",
+    "assert hasattr(w, 'screen')\n",
+    "assert hasattr(w, 'min')\n",
+    "assert hasattr(w, 'max')\n",
+    "\n",
+    "# Verify these are properties\n",
+    "assert isinstance(type(w).auto, property)\n",
+    "assert isinstance(type(w).full, property)\n",
+    "assert isinstance(type(w).screen, property)\n",
+    "\n",
+    "# Test named scales have properties for tab-completion  \n",
+    "assert hasattr(w, '_3xs')\n",
+    "assert hasattr(w, '_2xs')\n",
+    "assert hasattr(w, 'xs')\n",
+    "assert hasattr(w, 'sm')\n",
+    "assert hasattr(w, 'md')\n",
+    "assert hasattr(w, 'lg')\n",
+    "assert hasattr(w, 'xl')\n",
+    "assert hasattr(w, '_2xl')\n",
+    "assert hasattr(w, '_7xl')\n",
+    "\n",
+    "# Verify named scales are properties\n",
+    "assert isinstance(type(w).xs, property)\n",
+    "assert isinstance(type(w).lg, property)\n",
+    "assert isinstance(type(w)._2xl, property)\n",
+    "\n",
+    "# Test that they work correctly\n",
+    "assert str(w.auto) == \"w-auto\"\n",
+    "assert str(w.full) == \"w-full\"\n",
+    "assert str(w.xs) == \"w-xs\"\n",
+    "assert str(w._2xl) == \"w-2xl\"\n",
+    "\n",
+    "# Test negative factory tab-completion\n",
+    "m = DirectionalScaledFactory(\"m\", SPACING_CONFIG)\n",
+    "assert hasattr(m.negative, 'px')\n",
+    "assert isinstance(type(m.negative).px, property)\n",
+    "assert str(m.negative.px) == \"-m-px\"\n",
+    "\n",
+    "print(\"✅ ScaledFactory tab-completion tests passed!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0c09423e-2187-40ed-8daa-70aa99060122",
    "metadata": {},
    "outputs": [],
@@ -779,7 +999,7 @@
      "output_type": "stream",
      "text": [
       "Generated fractions:\n",
-      "['1/12', '2/12', '1/6', '1/5', '3/12', '1/4', '2/6', '1/3', '4/12', '2/5', '5/12', '6/12', '3/6', '2/4', '1/2', '7/12', '3/5', '2/3', '8/12', '4/6', '9/12', '3/4', '4/5', '5/6', '10/12', '11/12']\n"
+      "['1/12', '2/12', '1/6', '1/5', '1/4', '3/12', '2/6', '4/12', '1/3', '2/5', '5/12', '2/4', '3/6', '1/2', '6/12', '7/12', '3/5', '8/12', '4/6', '2/3', '9/12', '3/4', '4/5', '10/12', '5/6', '11/12']\n"
      ]
     }
    ],
